fix: removed z-index

--- a/src/index.css
+++ b/src/index.css
@@ -68,7 +68,7 @@ footer p {
 }
 
 nav {
-    z-index: 7;
+    /* z-index: 7; */
     will-change: transform;
     transition: background 0.3s, -webkit-transform 0.5s cubic-bezier(0.694, 0.048, 0.335, 1);
     transition: transform 0.5s cubic-bezier(0.694, 0.048, 0.335, 1), background 0.3s;
